--- a/vignettes/tutorial.Rmd
+++ b/vignettes/tutorial.Rmd
@@ -14,6 +14,11 @@ knitr::opts_chunk$set(
 )
 ```
 
-For the sake of maintenance and readability, the tutorial is fully and freely accessible here: https://paul-regnier.fr/tutoriel-amocati/.
+For the sake of maintenance and readability, the AMOCATI tutorial is fully and freely accessible here: https://paul-regnier.fr/tutoriel-amocati/.
+
+On this page, you will access:
+
+- Installation instructions
+- A detailed tutorial with an example analysis of an example dataset
 
 Thank you for your understanding!
